We insert these now to make sure the cursor is visible when the attachment is the only element in the paragraph

--- a/app/assets/stylesheets/terminals.css
+++ b/app/assets/stylesheets/terminals.css
@@ -117,6 +117,10 @@
       color: var(--color-terminal-text-light);
     }
 
+    br {
+      display: none;
+    }
+
     .terminal--error & {
       accent-color: var(--color-negative);
       caret-color: var(--color-negative);
